# tizen_basicGLES

./: .cproject  .gitignore  .project  .rds_delta  .sdk_delta.info  CMakeLists.txt  README.md  groups  project.config  project_def.prop  tizen-manifest.xml
inc/: basicgles.h  gl_utils.h
src/: basicgles.c  gl.c  gl_tex.c  gl_utils.c
