cmake_minimum_required(VERSION 3.3)
project(BasicGLES)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SBI_SYSROOT C:/tizen-sdk-2.4/platforms/tizen-2.4/mobile/rootstraps/mobile-2.4-device.core)

set(SDK_PATH C:/tizen-sdk)

include_directories(${SBI_SYSROOT}/usr/include/libxml2)
include_directories(${SDK_PATH}/library)
include_directories(${SBI_SYSROOT}/usr/include)
include_directories(${SBI_SYSROOT}/usr/include/appcore-agent)
include_directories(${SBI_SYSROOT}/usr/include/appcore-watch)
include_directories(${SBI_SYSROOT}/usr/include/appfw)
include_directories(${SBI_SYSROOT}/usr/include/badge)
include_directories(${SBI_SYSROOT}/usr/include/base)
include_directories(${SBI_SYSROOT}/usr/include/cairo)
include_directories(${SBI_SYSROOT}/usr/include/ckm)
include_directories(${SBI_SYSROOT}/usr/include/content)
include_directories(${SBI_SYSROOT}/usr/include/context-manager)
include_directories(${SBI_SYSROOT}/usr/include/dbus-1.0)
include_directories(${SBI_SYSROOT}/usr/include/device)
include_directories(${SBI_SYSROOT}/usr/include/dlog)
include_directories(${SBI_SYSROOT}/usr/include/ecore-1)
include_directories(${SBI_SYSROOT}/usr/include/e_dbus-1)
include_directories(${SBI_SYSROOT}/usr/include/edje-1)
include_directories(${SBI_SYSROOT}/usr/include/eet-1)
include_directories(${SBI_SYSROOT}/usr/include/efl-extension)
include_directories(${SBI_SYSROOT}/usr/include/efreet-1)
include_directories(${SBI_SYSROOT}/usr/include/eina-1)
include_directories(${SBI_SYSROOT}/usr/include/eina-1/eina)
include_directories(${SBI_SYSROOT}/usr/include/eio-1)
include_directories(${SBI_SYSROOT}/usr/include/elementary-1)
include_directories(${SBI_SYSROOT}/usr/include/embryo-1)
include_directories(${SBI_SYSROOT}/usr/include/ethumb-1)
include_directories(${SBI_SYSROOT}/usr/include/evas-1)
include_directories(${SBI_SYSROOT}/usr/include/ewebkit2-0)
include_directories(${SBI_SYSROOT}/usr/include/fontconfig)
include_directories(${SBI_SYSROOT}/usr/include/freetype2)
include_directories(${SBI_SYSROOT}/usr/include/gio-unix-2.0)
include_directories(${SBI_SYSROOT}/usr/include/glib-2.0)
include_directories(${SBI_SYSROOT}/usr/include/json-glib-1.0)
include_directories(${SBI_SYSROOT}/usr/include/json-glib-1.0/json-glib)
include_directories(${SBI_SYSROOT}/usr/include/location)
include_directories(${SBI_SYSROOT}/usr/include/media)
include_directories(${SBI_SYSROOT}/usr/include/media-content)
include_directories(${SBI_SYSROOT}/usr/include/messaging)
include_directories(${SBI_SYSROOT}/usr/include/minizip)
include_directories(${SBI_SYSROOT}/usr/include/network)
include_directories(${SBI_SYSROOT}/usr/include/notification)
include_directories(${SBI_SYSROOT}/usr/include/sensor)
include_directories(${SBI_SYSROOT}/usr/include/storage)
include_directories(${SBI_SYSROOT}/usr/include/system)
include_directories(${SBI_SYSROOT}/usr/include/telephony)
include_directories(${SBI_SYSROOT}/usr/include/ui)
include_directories(${SBI_SYSROOT}/usr/include/widget_service)
include_directories(${SBI_SYSROOT}/usr/include/widget_viewer_evas)
include_directories(${SBI_SYSROOT}/usr/lib/dbus-1.0/include)
include_directories(${SBI_SYSROOT}/usr/lib/glib-2.0/include)

include_directories(inc)

set(SOURCE_FILES
    inc/basicgles.h
    src/basicgles.c)

add_executable(BasicGLES ${SOURCE_FILES})